source/tests/errors/cannot_assign_not_variable.apex
function foo()
    return 0

foo = 5 